# wufeng-lin-family

./: .gitignore  .streamlit  README.md  app.py  combine-houses.py  convert-to-list.py  family_graph.ipynb  family_graph_interactive.html  fix_keys.py  hello.py  main.py  members_backup.json  migrate.py  pyproject.toml  remove_nulls.py  rename-to-pinyin.py  split_houses.py  to_relationships.py  update_english_names.py  wufeng_lin_family.py
data/: before_house.json  cleaned_data.json  combined_data_relationships.json  combined_houses_updated.json  early-house.json  early_house.json  external_house.json  lower-house.json  models.py  taiping_branch.json  wufeng_lin_family.py
data/houses/: overseas_house.json
data/lists/: overseas_house_list.json
data/lower_house/: lower_house.json
data/old_files/: combined_houses.json  combined_houses_updated.json  family_data.json  family_data_updated.json  upper_house.json
data/old_files/houses/: early_house.json  lower_house.json  upper_house.json
data/old_files/lists/: historic_family.json
data/upper_house/: Wenfeng_branch.json  Xiantang_branch.json  Yunlong_branch.json  upper_house.json
src/: database.py  family_graph.py  family_graph_interactive.html  from_claud.py  graph_create.py  graph_display.py  graph_render.py  member_page.py  models.py  relationship_page.py  render_family_graph_graphviz.py
