[project]
name = "wufeng-lin-family"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faiss-cpu>=1.11.0.post1",
    "google-genai>=1.28.0",
    "graphviz>=0.21",
    "jupyterlab>=4.4.3",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "langchain-google-genai>=2.1.9",
    "langchain-huggingface>=0.3.1",
    "langchain-tavily>=0.2.11",
    "langchainhub>=0.1.21",
    "langsmith>=0.4.11",
    "matplotlib>=3.10.1",
    "networkx>=3.4.2",
    "plotly>=6.3.0",
    "pydantic>=2.11.3",
    "pymongo>=4.13.1",
    "pyvis>=0.3.2",
    "pypdf>=5.9.0",
    "python-dotenv>=1.1.1",
    "pytz>=2025.2",
    "rich>=14.0.0",
    "sentence-transformers>=5.0.0",
    "streamlit>=1.44.1",
    "svr>=0.5",
    "tavily-python>=0.7.10",
    "toml>=0.10.2",
    "unidecode>=1.4.0",
]
